--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory plots already exists.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -136,12 +143,19 @@
        " 'floor_min_deviation_per_room.png']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "directory = \"plots\"\n",
+    "if not os.path.exists(directory):\n",
+    "    os.makedirs(directory)\n",
+    "    print(f\"Directory {directory} created.\")\n",
+    "else:\n",
+    "    print(f\"Directory {directory} already exists.\")\n",
+    "\n",
     "drawer = PltDrawer(\"deviation.json\")\n",
     "drawer.draw_plots()"
    ]
